--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "less-loader": "^4.0.2",
     "react": "^15.4.2",
